<resources>
    <string name="app_name">Quick Eye</string>
    <string name="new_game">NEW GAME</string>
    <string name="resume_buttontitle">RESUME</string>
    <string name="pause_buttontitle">PAUSE</string>
    <string name="level_passed">Level passed!</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="you_won">You won!</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="results">RESULTS</string>
    <string name="challenge">challenge</string>
    <string name="play">play</string>
    <string name="score_0">SCORE</string>
    <string name="todo">TODO</string>
    <string name="settings">SETTINGS</string>
    <string name="cooperate_with_your_friend">Cooperate with your friend</string>
    <string name="competition_text_preview">
        Welcome to the competition mode!\n
        In this mode you and your friend(s) will understand\n
        who is the most concentration person of you\n
        Your goal is to complete \n
        5 levels of matching cards\n
        In the end their will be a winner!\n
        Good luck!
    </string>
    <string name="start">START</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="flips_0">Flips:</string>
    <string name="points_0">Points:</string>
    <string name="lvl">Level</string>
    <string name="complexity">Complexity</string>
    <string name="matched_text1">MATCHED!</string>
    <string name="matched_text2">flips</string>
    <string name="matched_text3">points</string>
    <string name="menu_phone">Phone</string>
    <string name="menu_local">Network</string>
    <string name="menu_user">Profile</string>
    <string name="sign_in">Sign in</string>

    <string name="change_name">Create a nickname:</string>
    <string name="facebook_app_id">351314819122579</string>
    <string name="create">Create</string>
</resources>