<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_modification"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixel_font"
        android:gravity="center"
        android:text="@string/you_won"
        android:textColor="@color/whiteColor"
        android:textSize="24sp"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/pixel_font"
        android:gravity="center"
        android:text="@string/enter_your_name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:ems="10"
        android:fontFamily="@font/pixel_font"
        android:gravity="center"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/buttonsColor"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/pixel_font"
        android:gravity="center"
        android:layout_margin="10dp"

        android:text="@string/ok" />

</LinearLayout>