<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/resumeButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_marginTop="165dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/sf_pro_medium"
        android:text="@string/resume_buttontitle"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/sf_pro_medium"
        android:text="@string/new_game"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resumeButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="205dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/sf_pro_medium"
        android:text="@string/menu"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newGameButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/pause_buttontitle"
        android:textColor="@color/whiteColor"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>