<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_modification"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_bold"
        android:gravity="center"
        android:text="@string/you_won"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        tools:layout_conversion_absoluteHeight="21dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:id="@+id/enterTextView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="@font/sf_pro_medium"
        android:gravity="center"
        android:text="@string/enter_your_name"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_font"
        android:background="@color/dark_blue_green"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/white"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@android:color/white"
        android:textSize="25sp" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_medium"
        android:gravity="center"
        android:text="@string/ok"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp" />

</LinearLayout>