<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_animation_list">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_settings_black_24dp"
        android:onClick="openSettingsView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_centerInParent="true"
        app:srcCompat="@mipmap/logo_game"
        android:layout_below="@id/menuButton"/>

    <TextView
        android:id="@+id/lvlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/score_0"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_below="@id/imageView"/>


    <Button
        android:id="@+id/challengeButton"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/lvlTextView"
        android:layout_marginStart="30dp"
        android:background="@drawable/challenge_button"
        android:onClick="startChallengeGame"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/challenge"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/mainPlayButton"
        style="@style/TextAppearance.AppCompat.Widget.Button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/lvlTextView"
        android:layout_marginEnd="30dp"
        android:background="@drawable/play_button"
        android:onClick="startSingleGame"
        android:fontFamily="@font/sf_pro_bold"
        android:text="@string/play"
        android:textColor="@android:color/white"
        android:textSize="24sp" />


</RelativeLayout>